fix alignment issues on forms #7 #8

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@ h2 {
     font-size: 2rem;
 }
 
+i {
+    vertical-align: middle;
+}
+
 .card-image {
     height: 100%;
     overflow: hidden;
